--- a/config/default_livox_skyland.yaml
+++ b/config/default_livox_skyland.yaml
@@ -1,26 +1,28 @@
 # 针对NCLT的配置
 common:
   dataset: "nclt"
-  lidar_topic: "points_raw"
-  livox_lidar_topic: "/livox/lidar"
+  lidar_topic: "/livox/lidar"
+  livox_lidar_topic: "/livox/lidar2"
   imu_topic: "/livox/imu"
 
 # fasterlio 参数
 fasterlio:
   lidar_type: 1                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR,
   scan_line: 32
-  blind: 0.5                # 盲区，小于盲区距离的不会处理
+  blind: 0.1                # 盲区，小于盲区距离的不会处理
   time_scale: 1e-3             # 兼容不同数据集的时间单位，仅对Velodyne LiDAR(lidar_type=2)生效
 
   skip_lidar_num: 0 # 点云的跳帧情况
-  point_filter_num: 10 # 点云采样参数
+  point_filter_num: 5 # 点云采样参数
   max_iteration: 6 # 最大迭代次数
-  filter_size_scan: 0.5 # 对scan进行的降采样
-  filter_size_map: 0.5
+  filter_size_scan: 0.2 # 对scan进行的降采样
+  filter_size_map: 0.3
 
-  ivox_grid_resolution: 0.5        # default=0.2
+  ivox_grid_resolution: 0.2       # default=0.2
   ivox_nearby_type: 18             # 6, 18, 26
   esti_plane_threshold: 0.1        # default=0.1
+
+  use_aa: false  # use anderson-acceleration
 
   acc_cov: 0.1
   gyr_cov: 0.1
@@ -35,17 +37,17 @@ fasterlio:
 
 
 g2p5:
-  esti_floor: false   # 是否动态估计地面
+  esti_floor: true   # 是否动态估计地面
   lidar_height: 0.0   # 雷达安装高度
-  floor_height: -1.2   # 默认地面高度
-  min_th_floor: 0.50  # 距离地面这个高度的障碍物被扫入栅格地图中
-  max_th_floor: 1.0  # 距离地面这个高度的障碍物被扫入栅格地图中
-  grid_map_resolution: 0.2 # 栅格地图分辨率
+  floor_height: 0.0   # 默认地面高度
+  min_th_floor: 0.2  # 距离地面这个高度的障碍物被扫入栅格地图中
+  max_th_floor: 1.5  # 距离地面这个高度的障碍物被扫入栅格地图中
+  grid_map_resolution: 0.1 # 栅格地图分辨率
 
 system:
   with_loop_closing: true # 是否需要回环检测
   with_ui: true # 是否需要3D UI
-  with_2dui: false # 是否需要2D UI
+  with_2dui: true # 是否需要2D UI
   with_g2p5: true # 是否需要栅格地图
   step_on_kf: false # 是否在关键帧处暂停
 
@@ -61,10 +63,10 @@ system:
 loop_closing:
   loop_kf_gap: 20       # 每隔多少个关键帧检查一次
   min_id_interval: 20   # 被检查的关键帧ID间隔
-  closest_id_th: 50     # 历史关键帧与当前帧的ID间隔
-  max_range: 30.0       # 候选帧的最大距离
-  ndt_score_th: 1.3     # ndt位姿分值
-  with_height: true
+  closest_id_th: 30     # 历史关键帧与当前帧的ID间隔
+  max_range: 15.0       # 候选帧的最大距离
+  ndt_score_th: 1.0     # ndt位姿分值
+  with_height: false 
 
 
 ### localization ================================================================================================
